--- a/calculator/index.html
+++ b/calculator/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <title>Calci</title>
+    <title>Hii</title>
     <link rel="stylesheet"href="style.css">
     <script type="text/javascript" src="app.js">
     
