--- a/calculator/index.html
+++ b/calculator/index.html
@@ -20,7 +20,7 @@
 <br/><br/><br/>
 <label>OP2<input type="text" id="OP2"></label>
 <br/><br/><br/>
-<label>RESULT<input type="text" id="output"></label>
+<label>RESULT<input type="text" id="output-"></label>
 <br/><br/>
    </div> 
 <br/>
